[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "appdirs", "tinydb", "termcolor", "pdf2image", "loguru", "virtualenv"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name="rainbow_blinken_lights"
version="0.0.1"
authors = [
    { name="Casey Beach", email="beachc@gmail.com"}
]
requires-python = ">=3.10"
